--- a/DX-Portal/works/html/IDX-0002.html
+++ b/DX-Portal/works/html/IDX-0002.html
@@ -10,12 +10,15 @@
     <title>DX Portal</title>
     <link rel="stylesheet" href="../js/lib/jquery-ui.min.css">
 	<link rel="stylesheet" href="../js/lib/swiper.min.css"> 
+    <link rel="stylesheet" href="../js/lib/owl.carousel.min.css">
+	<link rel="stylesheet" href="../js/lib/owl.theme.default.min.css"> 
 	<link rel="stylesheet" href="../css/ui.css">
      <!-- Common Library -->
-	<script src="../js/lib/jquery-3.4.1.min.js"></script>
-	<script src="../js/lib/jquery-ui.min.js"></script> 
-	<script src="../js/lib/swiper.min.js"></script> 
-	<script src="../js/ui.js"></script> 
+	<script type="text/javascript" src="../js/lib/jquery-3.4.1.min.js"></script>
+	<script type="text/javascript" src="../js/lib/jquery-ui.min.js"></script> 
+	<script type="text/javascript" src="../js/lib/swiper.min.js"></script> 
+    <script type="text/javascript" src="../js/lib/owl.carousel.js"></script>
+	<script type="text/javascript" src="../js/ui.js"></script> 
 </head>
 <body>
     <div class="wrapper">
@@ -65,9 +68,9 @@
 								<ul>
 									<li><a href="#none">과제 문의</a></li>
                                     <li><a href="#none">과제 등록</a></li>
-									<li><a href="#none"></a>과제 조회</a></li>
-									<li><a href="#none"></a>RPA 과제요청</a></li>
-									<li><a href="#none"></a>RPA 과제 조회</a></li> 
+									<li><a href="#none">과제 조회</a></li>
+									<li><a href="#none">RPA 과제요청</a></li>
+									<li><a href="#none">RPA 과제 조회</a></li> 
 								</ul>
 							</div> 
 						</li>
@@ -139,11 +142,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -160,11 +175,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -181,11 +208,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -202,11 +241,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -223,11 +274,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -244,11 +307,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -265,11 +340,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -286,11 +373,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -307,11 +406,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -328,11 +439,23 @@
 										<span>일반자료</span>
 									</div>
 									<p>RPA 타이틀</p>
-									<div class="tag">
-										<button type="button">AIB</button>
-										<button type="button">기초교육</button>
-										<button type="button">교육자료</button> 
-									</div>
+									 <div class="tag owl-carousel owl-theme"> 
+                                        <span class="item">
+                                            <button type="button">AIB</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span> 
+                                        <span class="item">
+                                            <button type="button">기초교육</button>
+                                        </span>  
+                                    </div>
 								</div>
 							</div>
 						</li>
@@ -350,6 +473,20 @@
         <!--// footer -->
 		 
 	</div>  
-    
+    <script> 
+        // (doc: https://owlcarousel2.github.io/OwlCarousel2/) 
+        var owl = $('.owl-carousel');
+        owl.owlCarousel({
+            items: 10,
+            margin: 10,
+            dots: false,
+            nav: false,
+            loop: false,
+            autoWidth:true,
+            autoplay: false,
+            autoplayTimeout: 3500,
+            autoplayHoverPause: true  
+		}) 
+	</script>
 </body>
 </html>
