--- a/DX-Portal/works/html/IDX-0003.html
+++ b/DX-Portal/works/html/IDX-0003.html
@@ -65,9 +65,9 @@
 								<ul>
 									<li><a href="#none">과제 문의</a></li>
                                     <li><a href="#none">과제 등록</a></li>
-									<li><a href="#none"></a>과제 조회</a></li>
-									<li><a href="#none"></a>RPA 과제요청</a></li>
-									<li><a href="#none"></a>RPA 과제 조회</a></li> 
+									<li><a href="#none">과제 조회</a></li>
+									<li><a href="#none">RPA 과제요청</a></li>
+									<li><a href="#none">RPA 과제 조회</a></li> 
 								</ul>
 							</div> 
 						</li>
@@ -263,6 +263,10 @@
 									</a>
 								</li>
 							</ul>
+
+							<div class="no-result">
+								검색결과가 없습니다.
+							</div>
 
 							<div class="pagination">
 								<a href="#none" class="btn-page btn-first"><i class="icon-nav-first">처음</i></a>
