--- a/DX-Portal/works/html/INQ-0001.html
+++ b/DX-Portal/works/html/INQ-0001.html
@@ -68,9 +68,9 @@
 								<ul>
 									<li><a href="#none">과제 문의</a></li>
                                     <li><a href="#none">과제 등록</a></li>
-									<li><a href="#none"></a>과제 조회</a></li>
-									<li><a href="#none"></a>RPA 과제요청</a></li>
-									<li><a href="#none"></a>RPA 과제 조회</a></li> 
+									<li><a href="#none">과제 조회</a></li>
+									<li><a href="#none">RPA 과제요청</a></li>
+									<li><a href="#none">RPA 과제 조회</a></li> 
 								</ul>
 							</div> 
 						</li>
