--- a/DX-Portal/works/html/INQ-P-0002.html
+++ b/DX-Portal/works/html/INQ-P-0002.html
@@ -85,12 +85,22 @@
 											<span style="width:60%;"></span>
 										</div>
 									</div> 
+									<ul class="file-add-list">
+										<li>
+											<a href="#none">1.데이터분석_R_소개_설치.pptx</a>
+											<button type="button">삭제</button>
+										</li>
+										<li>
+											<a href="#none">1.데이터분석_R_소개_설치.pptx</a>
+											<button type="button">삭제</button>
+										</li> 
+									</ul>
 								</td>
 							</tr>
 						</tbody>
 					</table>
 				</div>
-				<p class="req-text">※ <em>“커뮤니티-자료실＂</em>에서 interview 양식 다운로드</p>
+				<p class="req-text">※ <em><a href="#none">“커뮤니티-자료실＂</a></em>에서 interview 양식 다운로드</p>
 				<div class="btn-wrap list-foot"> 
 					<div class="right"> 
 						<button type="button" class="btn-red">등록</button>
