--- a/DX-Portal/publishing_list.html
+++ b/DX-Portal/publishing_list.html
@@ -134,16 +134,16 @@
 				<td class="memo"></td>
 			</tr>
 			
-			<!--<tr>
+			<tr>
 				<td class="dep1"></td>
 				<td class="dep2">태그 선택</td>
 				<td class="dep3"></td>
 				<td class="dep4"></td>
-				<td class="link"><a href="works/html/IDX-0003.html" target="_blank">IDX-0003.html</a></td>
-				<td class="finishD"><span class="ico none">2021.08.17</span></td>
+				<td class="link"><a href="works/html/COM-P-0008.html" target="_blank">COM-P-0008.html</a></td>
+				<td class="finishD"><span class="ico done">2021.08.26</span></td>
 				<td class="editD"></td>
 				<td class="memo"></td>
-			</tr> -->
+			</tr>
 			<tr>
 				<td class="dep1"></td>
 				<td class="dep2">통합검색결과</td>
