--- a/DX-Portal/works/html/INQ-0002.html
+++ b/DX-Portal/works/html/INQ-0002.html
@@ -242,10 +242,10 @@
 								</tbody>
 							</table>
 						</div>
-						<div class="btn-wrap"> 
+						<div class="button-wrap"> 
 							<div class="right">
-								<button type="button" class="btn-red">등록</button>
-								<a href="#none" class="btn-common">목록</a>
+								<button type="button" class="bt-red">등록</button> 
+								<a href="#none" class="bt-common">목록</a>
 							</div>
 						</div> 
 					</div>
