--- a/DX-Portal/works/html/INQ-0002_write.html
+++ b/DX-Portal/works/html/INQ-0002_write.html
@@ -241,11 +241,11 @@
 								</tbody>
 							</table>
 						</div>
-						<div class="btn-wrap"> 
+						<div class="button-wrap"> 
 							<div class="right">
-								<button type="button" class="btn-redline">삭제</button>
-								<button type="button" class="btn-red">수정</button>
-								<a href="#none" class="btn-common">목록</a>
+								<button type="button" class="bt-redline">삭제</button>
+								<button type="button" class="bt-red">수정</button>
+								<a href="#none" class="bt-common">목록</a>
 							</div>
 						</div> 
 					</div>
