--- a/DX-Portal/works/html/INQ-P-0002.html
+++ b/DX-Portal/works/html/INQ-P-0002.html
@@ -101,10 +101,10 @@
 					</table>
 				</div>
 				<p class="req-text">※ <em><a href="#none">“커뮤니티-자료실＂</a></em>에서 interview 양식 다운로드</p>
-				<div class="btn-wrap list-foot"> 
+				<div class="button-wrap list-foot"> 
 					<div class="right"> 
-						<button type="button" class="btn-red">등록</button>
-						<button type="button" class="btn-common">목록</button> 
+						<button type="button" class="bt-red">등록</button>
+						<button type="button" class="bt-common">목록</button> 
 					</div>
 				</div>   
 			</div>	 
