--- a/DX-Portal/works/html/NQ-P-0001.html
+++ b/DX-Portal/works/html/NQ-P-0001.html
@@ -84,32 +84,32 @@
 								<td>김기석 (kimkiseck)</td>
 								<td>책임</td>
 								<td class="left">DX 추진팀</td>
-								<td><button type="button" class="btn-redline delete">삭제</button></td> 
+								<td><button type="button" class="btn-redline rounded delete">삭제</button></td> 
 							</tr> 
 							<tr> 
 								<td>김기석 (kimkiseck)</td>
 								<td>책임</td>
 								<td class="left">CPO.공정.지능화.제조DX.빅데이터분석P</td>
-								<td><button type="button" class="btn-redline delete">삭제</button></td> 
+								<td><button type="button" class="btn-redline rounded delete">삭제</button></td> 
 							</tr> 
 							<tr> 
 								<td>김기석 (kimkiseck)</td>
 								<td>책임</td>
 								<td class="left">CPO.공정.지능화.제조DX.빅데이터분석P</td>
-								<td><button type="button" class="btn-redline delete">삭제</button></td> 
+								<td><button type="button" class="btn-redline rounded delete">삭제</button></td> 
 							</tr> 
 							<tr> 
 								<td>김기석 (kimkiseck)</td>
 								<td>책임</td>
 								<td class="left">DX 추진팀</td>
-								<td><button type="button" class="btn-redline delete">삭제</button></td> 
+								<td><button type="button" class="btn-redline rounded delete">삭제</button></td> 
 							</tr>  
 						</tbody>
 					</table>
 				</div>
 				<div class="pagination">
-					<a href="#none" class="btn-page btn-first"><i class="icon-nav-first">처음</i></a>
-					<a href="#none" class="btn-page btn-prev"><i class="icon-nav-prev">이전</i></a>
+					<a href="#none" class="button-page button-first"><i class="icon-nav-first">처음</i></a>
+					<a href="#none" class="button-page button-prev"><i class="icon-nav-prev">이전</i></a>
 					<span class="num">
 						<a href="#none" class="active"><span>1</span></a>
 						<a href="#none"><span>2</span></a>
@@ -117,12 +117,12 @@
 						<a href="#none"><span>4</span></a>
 						<a href="#none"><span>5</span></a>
 					</span>
-					<a href="#none" class="btn-page btn-next"><i class="icon-nav-next">다음</i></a>
-					<a href="#none" class="btn-page btn-last"><i class="icon-nav-last">마지막</i></a>
+					<a href="#none" class="button-page button-next"><i class="icon-nav-next">다음</i></a>
+					<a href="#none" class="button-page button-last"><i class="icon-nav-last">마지막</i></a>
 				</div> 
-				<div class="btn-wrap list-foot"> 
+				<div class="button-wrap list-foot"> 
 					<div class="right"> 
-						<a href="#none" class="btn-common">닫기</a>
+						<a href="#none" class="bt-common">닫기</a>
 					</div>
 				</div>   
 			</div>	 
