--- a/DX-Portal/works/html/IDX-0003.html
+++ b/DX-Portal/works/html/IDX-0003.html
@@ -269,8 +269,8 @@
 							</div>
 
 							<div class="pagination">
-								<a href="#none" class="btn-page btn-first"><i class="icon-nav-first">처음</i></a>
-								<a href="#none" class="btn-page btn-prev"><i class="icon-nav-prev">이전</i></a>
+								<a href="#none" class="button-page button-first"><i class="icon-nav-first">처음</i></a>
+								<a href="#none" class="button-page button-prev"><i class="icon-nav-prev">이전</i></a>
 								<span class="num">
 									<a href="#none" class="active"><span>1</span></a>
 									<a href="#none"><span>2</span></a>
@@ -278,8 +278,8 @@
 									<a href="#none"><span>4</span></a>
 									<a href="#none"><span>5</span></a>
 								</span>
-								<a href="#none" class="btn-page btn-next"><i class="icon-nav-next">다음</i></a>
-								<a href="#none" class="btn-page btn-last"><i class="icon-nav-last">마지막</i></a>
+								<a href="#none" class="button-page button-next"><i class="icon-nav-next">다음</i></a>
+								<a href="#none" class="button-page button-last"><i class="icon-nav-last">마지막</i></a>
 							</div>  
 						</div>  
 					</div>
