--- a/DX-Portal/works/html/INQ-0002_detail.html
+++ b/DX-Portal/works/html/INQ-0002_detail.html
@@ -232,7 +232,7 @@
 
 						<div class="h-title-wrap">
 							<h3>인터뷰 목록</h3>
-							<button type="button" class="btn-redline">인터뷰 등록</button>
+							<button type="button" class="bt-redline">인터뷰 등록</button>
 						</div>
 
 						<div class="tableList"> 
@@ -262,12 +262,12 @@
 							</table>
 						</div> 
 						<p class="req-text">※ 목록을 누르면 인터뷰를 수정하실 수 있습니다.</p>
-						<div class="btn-wrap list-foot"> 
+						<div class="button-wrap list-foot"> 
 							<div class="right">
-								<button type="button" class="btn-red">승인</button>
-								<button type="button" class="btn-redline">반려</button>
-								<button type="button" class="btn-redline">삭제</button>
-								<a href="#none" class="btn-common">목록</a>
+								<button type="button" class="bt-red">승인</button>
+								<button type="button" class="bt-redline">반려</button>
+								<button type="button" class="bt-redline">삭제</button>
+								<a href="#none" class="bt-common">목록</a>
 							</div>
 						</div> 
 					</div>
